--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,15 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# 项目特定文件
+*.pth
+*.png
+results/
+synthetic_data/
+
+# 大型数据文件
+assets/*.mat
+assets/*/*.mat
+
+results/
